--- a/index.html
+++ b/index.html
@@ -87,14 +87,16 @@
     justify-content: space-between;
   }
 
-  /* Spezifische Farben für die Fachbereiche (oben der Balken) */
-  .informatik .front { border-color: #009682; } /* Türkis */
-  .wirtschaft .front { border-color: #ee7f00; } /* Orange */
-  .bwl .front { border-color: #d0004b; } /* Rot/Pink */
-  .mathe .front { border-color: #9c2aa0; } /* Lila */
-  .wiarbeiten {border-color: #AECF43; }/* hellgrün*/
-  .itrecht {border-color: #AECF43; }/* hellgrün*/
-  .international {border-color: #AECF43; }/* hellgrün*/
+  /* Spezifische Farben für die Fachbereiche */
+.informatik .front { border-color: #009682; } /* Türkis */
+.wirtschaft .front { border-color: #ee7f00; } /* Orange */
+.bwl .front { border-color: #d0004b; }        /* Rot/Pink */
+.mathe .front { border-color: #9c2aa0; }      /* Lila */
+
+/* Deine neuen grünen Fächer */
+.wiarbeiten .front   { border-color: #AECF43; } /* hellgrün */
+.itrecht .front      { border-color: #AECF43; } /* hellgrün */
+.international .front { border-color: #AECF43; } /* hellgrün */
 
 
   .module-name { font-weight: 600; font-size: 0.95rem; }
@@ -583,4 +585,5 @@
 </script>
 
 </body>
+
 </html>
