--- a/index.html
+++ b/index.html
@@ -687,7 +687,7 @@
   // ==========================================
   // KONFIGURATION: HIER DEINE NEUE WEBHOOK URL REIN
   // ==========================================
-  const WEBHOOK_URL = 'https://c464hnhdaqxo3g1vc5acdvc8.hooks.n8n.cloud/webhook/https://c464hnhdaqxo3g1vc5acdvc8.hooks.n8n.cloud/webhook/chat'; 
+  const WEBHOOK_URL = 'https://c464hnhdaqxo3g1vc5acdvc8.hooks.n8n.cloud/webhook/chat'; 
   
   // Generiert eine zufällige ID, damit sich der Bot an das Gespräch erinnert
   let sessionId = localStorage.getItem('chatSessionId');
@@ -763,6 +763,7 @@
 </html>
 </body>
 </html>
+
 
 
 
