--- a/index.html
+++ b/index.html
@@ -549,6 +549,7 @@
 <script src="quiz-data.js"></script>
 <script src="main.js"></script>
 
+<link href="https://cdn.jsdelivr.net/npm/@n8n/chat/dist/style.css" rel="stylesheet" />
 <script type="module">
 	import { createChat } from 'https://c464hnhdaqxo3g1vc5acdvc8.hooks.n8n.cloud/webhook/26752c70-283a-4f07-96c4-2d0de08b8782/chat';
 
@@ -559,6 +560,7 @@
 
 </body>
 </html>
+
 
 
 
