--- a/index.html
+++ b/index.html
@@ -557,12 +557,13 @@
 	createChat({
 		webhookUrl: 'https://c464hnhdaqxo3g1vc5acdvc8.hooks.n8n.cloud/webhook/26752c70-283a-4f07-96c4-2d0de08b8782/chat',
         mode: 'window', // Macht das Chat-Fenster hübsch
-        showWelcomeScreen: true,
+        showWelcomeScreen: false,
 	});
 </script>
 	
 </body>
 </html>
+
 
 
 
