--- a/index.html
+++ b/index.html
@@ -550,19 +550,21 @@
 <script src="main.js"></script>
 
 <script type="module">
-    // 1. Hier laden wir das Chat-Programm (NICHT ÄNDERN)
-	import { createChat } from 'https://cdn.jsdelivr.net/npm/@n8n/chat/dist/chat.bundle.es.js';
+    import { createChat } from 'https://cdn.jsdelivr.net/npm/@n8n/chat/dist/chat.bundle.es.js';
 
-    // 2. Hier starten wir es mit DEINER Adresse
-	createChat({
-		webhookUrl: 'https://c464hnhdaqxo3g1vc5acdvc8.hooks.n8n.cloud/webhook/26752c70-283a-4f07-96c4-2d0de08b8782/chat',
-        mode: 'window', // Macht das Chat-Fenster hübsch
+    createChat({
+        // WICHTIG: Hier deine Ngrok-URL einsetzen
+        webhookUrl: 'https://e7c194b48984.ngrok-free.app/home/workflows',
+        mode: 'window',
         showWelcomeScreen: false,
-	});
+        loadPreviousSession: false,
+        defaultLanguage: 'de'
+    });
 </script>
 	
 </body>
 </html>
+
 
 
 
