--- a/index.html
+++ b/index.html
@@ -554,7 +554,7 @@
 
     createChat({
         // WICHTIG: Hier deine Ngrok-URL einsetzen
-        webhookUrl: 'https://e7c194b48984.ngrok-free.app/home/workflows',
+        webhookUrl: 'https://c464hnhdaqxo3g1vc5acdvc8.hooks.n8n.cloud/webhook/26752c70-283a-4f07-96c4-2d0de08b8782/chat',
         mode: 'window',
         showWelcomeScreen: false,
         loadPreviousSession: false,
@@ -564,6 +564,7 @@
 	
 </body>
 </html>
+
 
 
 
