--- a/index.html
+++ b/index.html
@@ -587,7 +587,7 @@
   // URL KORRIGIERT: Deine ngrok ID + /webhook/chat
   // ==========================================
 // ngrok Adresse + /webhook/ + Path aus n8n
-const WEBHOOK_URL = 'https://DEINE-NGROK-ID.ngrok-free.app/webhook/chat';  
+const WEBHOOK_URL = 'https://a1f5bdef5739.ngrok-free.app/webhook/chat';  
   // Session ID erstellen (damit der Bot sich erinnert)
   let sessionId = localStorage.getItem('chatSessionId');
   if (!sessionId) {
@@ -653,6 +653,7 @@ const WEBHOOK_URL = 'https://DEINE-NGROK-ID.ngrok-free.app/webhook/chat';
 	
 </body>
 </html>
+
 
 
 
