--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
   <meta charset="utf-8">
   <title>testtesttes</title>
   <meta name="viewport" content="width=1200, initial-scale=0.3">
+  <link href="https://cdn.jsdelivr.net/npm/@n8n/chat/dist/style.css" rel="stylesheet" />
+
 </head>
 
 
