--- a/index.html
+++ b/index.html
@@ -3,6 +3,19 @@
   <title>testtesttes</title>
   <meta name="viewport" content="width=1200, initial-scale=0.3">
   <link href="https://cdn.jsdelivr.net/npm/@n8n/chat/dist/style.css" rel="stylesheet" />
+	<link rel="stylesheet" href="Css/berufsfinderModal.css">
+    <link rel="stylesheet" href="Css/curriculum.css">
+    <link rel="stylesheet" href="Css/curriculumLayout.css">
+    <link rel="stylesheet" href="Css/faq.css">
+    <link rel="stylesheet" href="Css/faqModal.css">
+    <link rel="stylesheet" href="Css/legendeFilter.css">
+    <link rel="stylesheet" href="Css/modulquiz.css">
+    <link rel="stylesheet" href="Css/quiz.css">
+    <link rel="stylesheet" href="Css/rechteKachel.css">
+    <link rel="stylesheet" href="Css/swipe.css">
+    <link rel="stylesheet" href="Css/tabs.css">
+	<link rel="stylesheet" href="Css/video.css">
+
 
 </head>
 
