--- a/index.html
+++ b/index.html
@@ -881,6 +881,15 @@
   }
 </style>
 
+<script src="Js/berufsFinder.js"></script>
+<script src="Js/diskreteStrukturen.js"></script>
+<script src="Js/faqKarten.js"></script>
+<script src="Js/legendeFilter.js"></script>
+<script src="Js/miniQuiz.js"></script>
+<script src="Js/tabs.js"></script>
+<script src="Js/miniQuiz.js"></script>
+
+
 <script type="module">
 	import { createChat } from 'https://cdn.jsdelivr.net/npm/@n8n/chat/dist/chat.bundle.es.js';
 
