--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
 
 </head>
 
+<body>
 
-
-<div class="curriculum-layout">
+	<div class="curriculum-layout">
   
   <!-- Linke Kachel -->
   <section class="curriculum">
@@ -911,3 +911,6 @@
 		showWelcomeScreen: false,
 	});
 </script>
+	
+</body>
+
