--- a/index.html
+++ b/index.html
@@ -45,6 +45,10 @@
     /* --- BUTTON UNTEN --- */
     --chat--toggle--background: #ee7f00;
     --chat--toggle--icon--color: #ffffff;
+
+	/* --- SYSTEM-FARBEN --- */
+    --chat--color-text: #ffffff; /* Macht die Lade-Punkte und sonstige Texte weiß */
+    --chat--color-light: #ffffff; /* Zur Sicherheit für die Animation */
   }
 </style>
 
